[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "iconema"
authors = [
  { name="sonjiku", email="contact.50nj1ku@erine.email" },
]
version = "0.5.0"
description = "Find the closest match to a provided color"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/sonjiku/iconema"
"Bug Tracker" = "https://github.com/sonjiku/iconema/issues"
